# pg_gpu

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  commit_message.txt  environment.yml  pixi.toml  pyproject.toml  validate_two_pop_ld.py  windowed_stats_example.csv
.github/workflows/: test.yml
cache/: moments_ld_im-parsing-example_im_pop_6bins_deme0-deme1.pkl  moments_ld_im.pkl
data/: im-parsing-example.vcf
debug/: bench_3L_validate.py  compare_edge_cases.py  compare_polymorphism_normalized.py  compare_polymorphism_stats.py  example_divergence.py  example_windowed_analysis.py  polymorphism_comparison_summary.md  stress_test_ag1000g.py  test_new_api.py  test_pi_theta_ratio.py  test_snp_windows.py  verify_missing_data_projection.py
docs/: Makefile  README.md  requirements.txt
docs/source/: achaz_framework.rst  api.rst  changelog.rst  conf.py  examples.rst  features.rst  index.rst  installation.rst  introduction.rst  missing_data.rst  moments_integration.rst  quickstart.rst  tutorials.rst  workflows.rst
docs/source/tutorials/: accessibility_mask.rst  admixture_detection.rst  ld_blocks.rst  local_pca.rst  moments_integration.rst  sweep_tajimas_d_bootstrap.rst
examples/: accessibility_mask.py  admixture_detection.py  four_pop_ld_benchmark.py  four_pop_ld_demo.py  ld_inference_demo.py  local_pca.py  local_pca_benchmark.R  local_pca_benchmark.py  moments_integration_demo.py  multipop_ld_benchmark.py  multipop_ld_genotype_benchmark.py  pg_gpu_tour.ipynb  sweep_tajimas_d_bootstrap.py  three_pop_ld_benchmark.py  two_pop_ld_benchmark.py  windowed_benchmark.py
examples/data/: gamb.X.8-12Mb.n100.derived.vcf.gz.tbi
pg_gpu/: __init__.py  _memutil.py  _utils.py  accessible.py  achaz.py  admixture.py  decomposition.py  distance_stats.py  divergence.py  diversity.py  genotype_kernels.py  genotype_matrix.py  haplotype_kernels.py  haplotype_matrix.py  ld_pipeline.py  ld_statistics.py  ld_statistics_genotype.py  moments_ld.py  plotting.py  relatedness.py  selection.py  sfs.py  stats_from_haplotype_counts_gpu.py  utils.py  windowed_analysis.py
simulations/: validate_multi_sim.py
simulations/output/: sim_seed11111.h5  sim_seed11111.vcf  sim_seed12345.h5  sim_seed12345.vcf  sim_seed67890.h5  sim_seed67890.vcf
simulations/output/cache/: moments_ld_seed11111_6bins.pkl  moments_ld_seed12345_6bins.pkl  moments_ld_seed67890_6bins.pkl
tests/: conftest.py  test_accessible_mask.py  test_achaz.py  test_admixture_allel_comparison.py  test_backward_compatibility.py  test_diploshic_stats.py  test_divergence.py  test_diversity.py  test_doc_examples.py  test_genotype_counts_kernel.py  test_haplotype_counting.py  test_haplotype_matrix.py  test_ld_missing_data.py  test_ld_missing_data_detailed.py  test_ld_pair_iteration.py  test_ld_r_squared.py  test_ld_statistics_comparison.py  test_ld_statistics_gpu.py  test_ld_statistics_gpu_single_pop.py  test_ld_validation_full.py  test_ld_validation_synthetic.py  test_local_pca.py  test_local_pca_parity.py  test_local_pca_streaming.py  test_missing_data_bias.py  test_moments_ld.py  test_pairwise_mode.py  test_pbs_decomposition.py  test_performance_validation.py  test_plotting.py  test_scikit_allel_comparison.py  test_selection.py  test_selection_allel_comparison.py  test_sfs_allel_comparison.py  test_two_pop_stats.py  test_windowed_analysis.py  test_windowed_comparison.py  validate_against_allel.py
tests/data/: generate_lostruct_reference.R  generate_lostruct_reference_input.json  generate_lostruct_reference_input.npz  generate_lostruct_reference_input.py  lostruct_reference_corners.json  lostruct_reference_eigen.json  lostruct_reference_jackknife.json  lostruct_reference_pcdist.json
