[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg_gpu"
version = "0.1.0"
description = "GPU-accelerated population genetics statistics"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrew Kern", email = "adk@uoregon.edu" },
]

[project.urls]
Homepage = "https://github.com/andrewkern/pg_gpu"

[tool.pytest.ini_options]
pythonpath = [
    "pg_gpu"
]
markers = [
    "slow: marks tests as slow (deselected by default, run with --slow)",
    "requires_r: developer-local test that shells out to R (skipped when R is unavailable; never run in CI)",
]
filterwarnings = [
    "ignore::DeprecationWarning:cupyx",
    "ignore::DeprecationWarning:moments",
    "ignore::DeprecationWarning:allel",
    "ignore:No invariant site information:UserWarning",
    "ignore:__array__ implementation:DeprecationWarning",
    "ignore:.*FORMAT header not found:UserWarning",
    "ignore::zarr.errors.UnstableSpecificationWarning",
    "ignore::zarr.errors.ZarrDeprecationWarning",
    "ignore:The `compressor` argument is deprecated:UserWarning:zarr",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E711",   # comparison to None (existing codebase style)
    "E712",   # comparison to True/False (existing codebase style)
    "E721",   # type comparison (existing codebase style)
    "E741",   # ambiguous variable name (common in pop gen: l, n, p)
    "F401",   # unused import (some re-exports are intentional)
    "F811",   # redefined unused name (test fixtures)
    "F841",   # unused variable (sometimes used for GPU sync)
    "W605",   # invalid escape sequence (in CUDA kernel strings)
]
